echoserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
spec:
  type: LoadBalancer
  selector:
    app: echoserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
