mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  labels:
    app: mariadb
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  serviceName: "mariadb-svc"
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - image: mariadb:10
        name: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: maria-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: maria-persistent-storage
        persistentVolumeClaim:
          claimName: maria-pv-claim
~
