readiness-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: readiness-demo
  name: readiness-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: readiness-demo
  template:
    metadata:
      labels:
        run: readiness-demo
    spec:
      containers:
      - image: nginx
        name: readiness-demo
        readinessProbe:
          httpGet:
            port: 80
            path: /
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: readiness-demo-svc
spec:
  selector:
    run: readiness-demo
  ports:
  - port: 80
