ingress-demo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: velero
spec:
  rules:
  - host: minio.hj.vm
    http:
      paths:
      - backend:
          serviceName: minio
          servicePort: 9000
