networkpolicy-label.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-label
spec:
  podSelector:
    matchLabels:
      app: apache
  policyTypes:
  - Ingress
  ingress:
  - from: #同一Namespaceから
    - podSelector:
        matchLabels:
          app: busybox
